History
=======

Version 0.5.0 - unreleased
--------------------------

- Upload and download of subscribers list.
  [skatja]
  
- Depend on 0.3 or higher of plone.app.z3cform.
  [nouri]

Version 0.4.1 - 2008-07-23
--------------------------

- Fix ``RuntimeError: maximum recursion depth exceeded`` error in
  ``Module collective.dancing.browser.portlets.channelsubscribe, line
  253, in channel`` when displaying portlets that were created prior
  to 0.4b4.
  [nouri]

Version 0.4 - 2008-07-23
------------------------

New features
~~~~~~~~~~~~

- Added subject, confirmation_subject and forgot_secret_subject to
  vars of composer for easy customization.  Defaults are unchanged.
  [tmog]

- Added sender name, sender address and reply-to address as per
  composer configuration. Composer configuration is now available
  in the new Composers fieldset of the channel edit view.
  [tmog]

- Allow for easier subclassing of HTMLComposer.  The ``_vars()``
  method is now more generally applicable and easily to override.
  [nouri]

- Made adding thirdparty Channels possible. This works the same as
  with Collectors - you simply implement you custom channel and add
  a factory to the collective.dancing.channel.channels list.
  Preview and edit forms are now class methods on ManageChannelView
  to make it easier to subclass for your custom channels.
  [tmog]

- Pass on raw item as received from the collector to the composer
  (template).  Making use of this raw item will obviously bind the
  implementation of the composer to that of the collector.  However,
  it's considered useful for custom implementations that need total
  control and that know what collector they'll be using.

  This required an API change in IComposer.render(); the ``items``
  argument is now a list of 2-tuples instead of a list of formatted
  items.
  [nouri]

- Added Polish translation by Barbara Struk
  [naro]

- Added another type of scheduler: TimedScheduler.  This one allows to