@@ -34,6 +34,7 @@ setup(name='collective.dancing',
       install_requires=[
           'setuptools',
           'collective.singing>=0.5dev',
+          'plone.z3cform>=0.4dev',
           'plone.app.z3cform>=0.3dev',
           'five.intid',
           'StoneageHTML',
